--- a/kubernetes/apps/database/pgadmin/ks.yaml
+++ b/kubernetes/apps/database/pgadmin/ks.yaml
@@ -25,6 +25,9 @@ spec:
       APP: *app
       VOLSYNC_PUID: "5050"
       VOLSYNC_PGID: "5050"
+    substituteFrom:
+      - name: cluster-secrets
+        kind: Secret
   prune: true
   retryInterval: 2m
   sourceRef:
