--- a/kubernetes/apps/flux-system/flux-instance/app/helmrelease.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/helmrelease.yaml
@@ -43,17 +43,6 @@ spec:
       kustomize:
         kustomize:
         patches:
-          # Add SOPS decryption to 'flux-system' Kustomizations.
-          - patch: |-
-              - op: add
-                path: /spec/decryption
-                value:
-                  provider: sops
-                  secretRef:
-                    name: sops-age
-            target:
-              group: kustomize.toolkit.fluxcd.io
-              kind: Kustomization
           # Increase the number of workers and limits.
           # Ref: https://fluxcd.io/flux/installation/configuration/vertical-scaling/#increase-the-number-of-workers-and-limits
           - patch: |-
@@ -128,12 +117,36 @@ spec:
             target:
               kind: Deployment
               name: helm-controller
-          - # Disable chart digest tracking.
-            patch: |-
+          # Disable chart digest tracking.
+          - patch: |-
               - op: add
                 path: /spec/template/spec/containers/0/args/-
                 value: --feature-gates=DisableChartDigestTracking=true
             target:
               kind: Deployment
               name: helm-controller
+          # Controller-level SOPS decryption.
+          - patch: |-
+              - op: add
+                path: /spec/template/spec/containers/0/args/-
+                value: --sops-age-secret=sops-age
+            target:
+              kind: Deployment
+              name: kustomize-controller
+          # Watch configmaps and secrets attached to HelmReleases and Kustomizations.
+          - patch: |-
+              - op: add
+                path: /spec/template/spec/containers/0/args/-
+                value: --watch-configs-label-selector=owner!=helm
+            target:
+              kind: Deployment
+              name: (helm-controller|kustomize-controller)
+          # Cancel health checks on new Kustomizations revisions.
+          - patch: |-
+              - op: add
+                path: /spec/template/spec/containers/0/args/-
+                value: --feature-gates=CancelHealthCheckOnNewRevision=true
+            target:
+              kind: Deployment
+              name: kustomize-controller
 
