--- a/kubernetes/apps/self-hosted/immich/ks.yaml
+++ b/kubernetes/apps/self-hosted/immich/ks.yaml
@@ -24,6 +24,9 @@ spec:
     substitute:
       APP: *app
       PVC_CAPACITY: 100Gi
+    substituteFrom:
+      - name: cluster-secrets
+        kind: Secret
   prune: true
   retryInterval: 2m
   sourceRef:
