--- a/kubernetes/apps/storage/democratic-csi/ks.yaml
+++ b/kubernetes/apps/storage/democratic-csi/ks.yaml
@@ -19,6 +19,10 @@ spec:
       namespace: *namespace
   interval: 1h
   path: ./kubernetes/apps/storage/democratic-csi/iscsi
+  postBuild:
+    substituteFrom:
+      - name: cluster-secrets
+        kind: Secret
   prune: true
   retryInterval: 2m
   sourceRef:
