chore: disable deployments

--- a/kubernetes/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/self-hosted/kustomization.yaml
@@ -11,5 +11,5 @@ resources:
   - ./karakeep/ks.yaml
   - ./immich/ks.yaml
   - ./immich-folder-album-creator/ks.yaml
-  - ./nextcloud/ks.yaml
+  # - ./nextcloud/ks.yaml
   - ./searxng/ks.yaml
