--- a/.taskfiles/talos/Taskfile.yaml
+++ b/.taskfiles/talos/Taskfile.yaml
@@ -105,7 +105,7 @@ tasks:
       - which jq talosctl
 
   generate-iso:
-    desc: Generate a Talos ISO for a specific version [VERSION=required]
+    desc: Generate a Talos ISO for bare metal install [VERSION=required]
     cmd: |
       curl -L -o {{.TALOS_DIR}}/talos-{{.VERSION}}-secureboot.iso \
         https://factory.talos.dev/image/{{.TALOS_SCHEMATIC}}/{{.VERSION}}/metal-amd64-secureboot.iso
@@ -119,7 +119,7 @@ tasks:
       - which curl task
 
   generate-iso-vm:
-    desc: Generate a Talos ISO for a specific version and VMs [VERSION=required]
+    desc: Generate a Talos ISO for VM install [VERSION=required]
     cmd: |
       curl -L -o {{.TALOS_DIR}}/talos-{{.VERSION}}-vm.iso \
         https://factory.talos.dev/image/{{.TALOS_SCHEMATIC}}/{{.VERSION}}/metal-amd64.iso
@@ -133,7 +133,7 @@ tasks:
       - which curl task
 
   generate-schematic:
-    desc: Generate a Talos schematic [ISO={{.ISO}}]
+    desc: Generate a Talos schematic for bare metal install [ISO={{.ISO}}]
     cmd: |
       minijinja-cli --define "iso={{.ISO}}" {{.TALOS_DIR}}/schematic.yaml.j2 \
         | curl --silent -X POST --data-binary @- https://factory.talos.dev/schematics \
@@ -145,7 +145,7 @@ tasks:
       - which curl jq minijinja-cli
 
   generate-schematic-vm:
-    desc: Generate a Talos schematic for VMs
+    desc: Generate a Talos schematic for VM install
     cmd: |
       minijinja-cli {{.TALOS_DIR}}/schematic-vm.yaml.j2 \
         | curl --silent -X POST --data-binary @- https://factory.talos.dev/schematics \
