chore(gatus): deploy gatus-sidecar

--- a/kubernetes/apps/observability/gatus/app/rbac.yaml
+++ b/kubernetes/apps/observability/gatus/app/rbac.yaml
@@ -10,10 +10,10 @@ metadata:
   name: gatus
 rules:
   - apiGroups:
-      - ""
+      - gateway.networking.k8s.io
     resources:
-      - configmaps
-      - secrets
+      - gateways
+      - httproutes
     verbs:
       - get
       - watch
