chore(gatus): deploy gatus-sidecar

--- a/kubernetes/apps/observability/gatus/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/gatus/app/helmrelease.yaml
@@ -29,6 +29,7 @@ spec:
             args:
               - --auto-httproute
               - --enable-httproute
+              - --enable-service
             resources:
               requests:
                 cpu: 10m
