--- a/kubernetes/apps/network/envoy-gateway/config/config.yaml
+++ b/kubernetes/apps/network/envoy-gateway/config/config.yaml
@@ -49,6 +49,10 @@ kind: Gateway
 metadata:
   annotations:
     external-dns.alpha.kubernetes.io/target: &hostname external.${SECRET_DOMAIN}
+    gatus.home-operations.com/endpoint: |-
+      client:
+        dns-resolver: tcp://1.1.1.1:53
+      group: external
   name: envoy-external
 spec:
   gatewayClassName: envoy
@@ -80,6 +84,12 @@ kind: Gateway
 metadata:
   annotations:
     external-dns.alpha.kubernetes.io/target: &hostname internal.${SECRET_DOMAIN}
+    gatus.home-operations.com/endpoint: |-
+      group: internal
+      guarded: true
+      ui:
+        hide-hostname: true
+        hide-url: true
   name: envoy-internal
 spec:
   gatewayClassName: envoy
