Revert "chore(gatus): temp disable enable-service arg for gatus-sidecar"
This reverts commit ad3836c81848a14f9e9b63a1694f804ea81554dc.

--- a/kubernetes/apps/observability/gatus/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/gatus/app/helmrelease.yaml
@@ -29,7 +29,7 @@ spec:
             args:
               - --auto-httproute
               - --enable-httproute
-              # - --enable-service
+              - --enable-service
             resources:
               requests:
                 cpu: 10m
