chore(gatus): add services in rbac

--- a/kubernetes/apps/observability/gatus/app/rbac.yaml
+++ b/kubernetes/apps/observability/gatus/app/rbac.yaml
@@ -10,6 +10,14 @@ metadata:
   name: gatus
 rules:
   - apiGroups:
+      - ""
+    resources:
+      - services
+    verbs:
+      - get
+      - watch
+      - list
+  - apiGroups:
       - gateway.networking.k8s.io
     resources:
       - gateways
