--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -7,13 +7,13 @@ components:
   - ../../components/common
 resources:
   # Flux-Kustomizations
-  - ./blackbox-exporter/ks.yaml
+  # - ./blackbox-exporter/ks.yaml
   - ./fluent-bit/ks.yaml
-  - ./gatus/ks.yaml
+  # - ./gatus/ks.yaml
   - ./grafana/ks.yaml
-  - ./headlamp/ks.yaml
-  - ./kromgo/ks.yaml
+  # - ./headlamp/ks.yaml
+  # - ./kromgo/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   - ./loki/ks.yaml
   - ./silence-operator/ks.yaml
-  - ./unpoller/ks.yaml
+  # - ./unpoller/ks.yaml
