chore: prep for cluster re-deployment

--- a/kubernetes/apps/kube-system/cilium/config/l2.yaml
+++ b/kubernetes/apps/kube-system/cilium/config/l2.yaml
@@ -8,6 +8,7 @@ spec:
   loadBalancerIPs: true
   # TODO: Change interfaces to 'bond0' prior to single node cluster deployment.
   interfaces:
+    - bond0
     - eth0
   nodeSelector:
     matchLabels:
