--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -40,7 +40,7 @@ spec:
         grafana_folder: Network
       enabled: true
     # TODO: Change devices to 'bond+' prior to single node cluster deployment.
-    devices: eth0
+    devices: bond+ eth0
     enableIPv4BIGTCP: true
     endpointRoutes:
       enabled: true
@@ -71,7 +71,7 @@ spec:
         serviceMonitor:
           enabled: true
       # TODO: Change to 1 replica prior to single node cluster deployment.
-      replicas: 2
+      replicas: 1
       rollOutPods: true
     pmtuDiscovery:
       enabled: true
