--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -5,15 +5,15 @@ kind: Kustomization
 namespace: observability
 components:
   - ../../components/common
-resources:
+resources: []
   # Flux-Kustomizations
   # - ./blackbox-exporter/ks.yaml
-  - ./fluent-bit/ks.yaml
+  # - ./fluent-bit/ks.yaml
   # - ./gatus/ks.yaml
-  - ./grafana/ks.yaml
+  # - ./grafana/ks.yaml
   # - ./headlamp/ks.yaml
   # - ./kromgo/ks.yaml
-  - ./kube-prometheus-stack/ks.yaml
-  - ./loki/ks.yaml
-  - ./silence-operator/ks.yaml
+  # - ./kube-prometheus-stack/ks.yaml
+  # - ./loki/ks.yaml
+  # - ./silence-operator/ks.yaml
   # - ./unpoller/ks.yaml
