feat: re-deploy cluster 🚀

--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
   # Flux-Kustomizations
   - ./audiobookshelf/ks.yaml
   # - ./bazarr/ks.yaml
-  # - ./jellyfin/ks.yaml
+  - ./jellyfin/ks.yaml
   # - ./jellyseerr/ks.yaml
   # - ./lidarr/ks.yaml
   - ./navidrome/ks.yaml
