--- a/kubernetes/apps/media/jellyfin/ks.yaml
+++ b/kubernetes/apps/media/jellyfin/ks.yaml
@@ -22,8 +22,7 @@ spec:
     substitute:
       APP: *app
       VOLSYNC_CAPACITY: 6Gi
-      VOLSYNC_STORAGECLASS: &storageClass openebs-hostpath
-      VOLSYNC_SNAPSHOTCLASS: *storageClass
+      VOLSYNC_STORAGECLASS: openebs-hostpath
     substituteFrom:
       - name: cluster-secrets
         kind: Secret
