--- a/kubernetes/apps/downloads/kustomization.yaml
+++ b/kubernetes/apps/downloads/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 namespace: downloads
 components:
   - ../../components/common
-resources: []
+resources:
   # Flux-Kustomizations
   # - ./pinchflat/ks.yaml
-  # - ./qbittorrent/ks.yaml
+  - ./qbittorrent/ks.yaml
