--- a/kubernetes/apps/network/unifi-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/unifi-dns/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app unifi-dns
+  name: unifi-dns
 spec:
   interval: 1h
   chartRef:
@@ -17,7 +17,12 @@ spec:
     remediation:
       retries: 3
   values:
-    fullnameOverride: *app
+    fullnameOverride: external-dns-unifi
+    domainFilters:
+      - ${SECRET_DOMAIN}
+    podAnnotations:
+      secret.reloader.stakater.com/reload: &secret unifi-dns-secret
+    policy: sync
     provider:
       name: webhook
       webhook:
@@ -30,7 +35,7 @@ spec:
           - name: UNIFI_API_KEY
             valueFrom:
               secretKeyRef:
-                name: &secret unifi-dns-secret
+                name: *secret
                 key: UNIFI_API_KEY
         livenessProbe:
           httpGet:
@@ -44,15 +49,6 @@ spec:
             port: http-webhook
           initialDelaySeconds: 10
           timeoutSeconds: 5
-    domainFilters:
-      - ${SECRET_DOMAIN}
-    policy: sync
-    sources:
-      - gateway-httproute
-      - service
-    triggerLoopOnEvent: true
-    txtOwnerId: main
-    txtPrefix: k8s.main.
     resources:
       requests:
         cpu: 10m
@@ -61,5 +57,9 @@ spec:
         memory: 192Mi
     serviceMonitor:
       enabled: true
-    podAnnotations:
-      secret.reloader.stakater.com/reload: *secret
+    sources:
+      - gateway-httproute
+      - service
+    triggerLoopOnEvent: true
+    txtOwnerId: main
+    txtPrefix: k8s.main.
