--- a/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
@@ -62,10 +62,10 @@ spec:
               requests:
                 cpu: 200m
                 memory: 2Gi
-                # nvidia.com/gpu: 1 # Request 1 GPU.
+                amd.com/gpu: 1 # Request 1 GPU.
               limits:
                 memory: 4Gi
-                # nvidia.com/gpu: 1
+                amd.com/gpu: 1
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
@@ -83,7 +83,6 @@ spec:
       nodeSelector:
         gpu.home-ops/amd: "true"
       priorityClassName: gpu-priority
-      # runtimeClassName: nvidia
       securityContext:
         runAsNonRoot: true
         runAsUser: 1000
