chore(jellyfin): add dependsOn amd-device-plugin

--- a/kubernetes/apps/media/jellyfin/ks.yaml
+++ b/kubernetes/apps/media/jellyfin/ks.yaml
@@ -12,6 +12,8 @@ spec:
   components:
     - ../../../../components/volsync
   dependsOn:
+    - name: amd-device-plugin
+      namespace: kube-system
     - name: democratic-csi-iscsi
       namespace: storage
     - name: volsync
