--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
   # Flux-Kustomizations
   - ./blackbox-exporter/ks.yaml
   - ./fluent-bit/ks.yaml
-  - ./gatus/ks.yaml
+  # - ./gatus/ks.yaml
   - ./grafana/ks.yaml
   - ./headlamp/ks.yaml
   - ./kromgo/ks.yaml
