--- a/kubernetes/apps/kube-system/cilium/ks.yaml
+++ b/kubernetes/apps/kube-system/cilium/ks.yaml
@@ -40,6 +40,10 @@ spec:
       namespace: *namespace
   interval: 1h
   path: ./kubernetes/apps/kube-system/cilium/config
+  postBuild:
+    substituteFrom:
+      - name: cluster-secrets
+        kind: Secret
   prune: true
   retryInterval: 2m
   sourceRef:
