--- a/kubernetes/apps/self-hosted/immich/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/immich/app/helmrelease.yaml
@@ -66,11 +66,11 @@ spec:
               requests:
                 cpu: 500m
                 memory: 1Gi
-                nvidia.com/gpu: 1 # Request 1 GPU.
+                # nvidia.com/gpu: 1 # Request 1 GPU.
               limits:
                 # Disable during initial import of photographs.
                 memory: 8Gi
-                nvidia.com/gpu: 1
+                # nvidia.com/gpu: 1
             securityContext: &securityContext
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
@@ -78,20 +78,20 @@ spec:
           machine-learning:
             image:
               repository: ghcr.io/immich-app/immich-machine-learning
-              tag: v2.0.1-cuda
+              tag: v2.0.1
             env:
               <<: *env
-              # Pre-loading of ML model must not be enabled during initial de-
-              # ployment. Will cause crash loop otherwise.
+              # Pre-loading of ML model must not be enabled during initial deployment. Will cause
+              # crash loop otherwise.
               # Recommended model according to https://v1.131.0.archive.immich.app/docs/features/searching/#clip-models
               # Also see the following comment: https://github.com/immich-app/immich/discussions/17105#discussioncomment-12620002
-              MACHINE_LEARNING_PRELOAD__CLIP__TEXTUAL: "XLM-Roberta-Large-ViT-H-14__frozen_laion5b_s13b_b90k"
-              MACHINE_LEARNING_PRELOAD__CLIP__VISUAL: "XLM-Roberta-Large-ViT-H-14__frozen_laion5b_s13b_b90k"
-              MACHINE_LEARNING_PRELOAD__FACIAL_RECOGNITION__RECOGNITION: buffalo_l
-              MACHINE_LEARNING_PRELOAD__FACIAL_RECOGNITION__DETECTION: buffalo_l
+              # MACHINE_LEARNING_PRELOAD__CLIP__TEXTUAL: "XLM-Roberta-Large-ViT-H-14__frozen_laion5b_s13b_b90k"
+              # MACHINE_LEARNING_PRELOAD__CLIP__VISUAL: "XLM-Roberta-Large-ViT-H-14__frozen_laion5b_s13b_b90k"
+              # MACHINE_LEARNING_PRELOAD__FACIAL_RECOGNITION__RECOGNITION: buffalo_l
+              # MACHINE_LEARNING_PRELOAD__FACIAL_RECOGNITION__DETECTION: buffalo_l
               MPLCONFIGDIR: /tmp/matplotlib
-              NVIDIA_VISIBLE_DEVICES: "all"
-              NVIDIA_DRIVER_CAPABILITIES: "all"
+              # NVIDIA_VISIBLE_DEVICES: "all"
+              # NVIDIA_DRIVER_CAPABILITIES: "all"
             envFrom: *envFrom
             probes:
               liveness: &probes
@@ -110,26 +110,26 @@ spec:
               requests:
                 cpu: 100m
                 memory: 2Gi
-                nvidia.com/gpu: 1 # Request 1 GPU.
+                # nvidia.com/gpu: 1 # Request 1 GPU.
               limits:
                 # Disable during initial import of photographs.
                 memory: 8Gi
-                nvidia.com/gpu: 1
+                # nvidia.com/gpu: 1
             securityContext: *securityContext
     defaultPodOptions:
-      affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-              - matchExpressions:
-                  - key: gpu.home-ops/nvidia
-                    operator: In
-                    values:
-                      - "true"
-      nodeSelector:
-        gpu.home-ops/nvidia: "true"
-      priorityClassName: gpu-priority
-      runtimeClassName: nvidia
+      # affinity:
+      #   nodeAffinity:
+      #     requiredDuringSchedulingIgnoredDuringExecution:
+      #       nodeSelectorTerms:
+      #         - matchExpressions:
+      #             - key: gpu.home-ops/nvidia
+      #               operator: In
+      #               values:
+      #                 - "true"
+      # nodeSelector:
+      #   gpu.home-ops/nvidia: "true"
+      # priorityClassName: gpu-priority
+      # runtimeClassName: nvidia
       securityContext:
         runAsNonRoot: true
         runAsUser: 1000
