--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -40,6 +40,7 @@ spec:
         grafana_folder: Network
       enabled: true
     # TODO: Change devices to 'bond+' prior to single node cluster deployment.
+    # TODO: Remove 'eth0' when cluster nodes only uses bonded interfaces.
     devices: bond+ eth0
     enableIPv4BIGTCP: true
     endpointRoutes:
@@ -70,7 +71,7 @@ spec:
         enabled: true
         serviceMonitor:
           enabled: true
-      # TODO: Change to 1 replica prior to single node cluster deployment.
+      # TODO: Change to 2 replicas prior to multi-node cluster deployment.
       replicas: 1
       rollOutPods: true
     pmtuDiscovery:
