--- a/.renovate/groups.json5
+++ b/.renovate/groups.json5
@@ -15,7 +15,10 @@
       description: "Actions Runner Controller Group",
       groupName: "actions-runner-controller",
       matchDatasources: ["docker"],
-      matchPackageNames: ["/gha-runner-scale-set-controller/", "/gha-runner-scale-set/"],
+      matchPackageNames: [
+        "/gha-runner-scale-set-controller/",
+        "/gha-runner-scale-set/"
+      ],
       group: {
         commitMessageTopic: "{{{groupName}}} group",
       },
@@ -25,7 +28,10 @@
       description: "Barman Cloud Group",
       groupName: "barman-cloud",
       matchDatasources: ["docker", "github-releases"],
-      matchPackageNames: ["**/plugin-barman-cloud", "**/plugin-barman-cloud-sidecar"],
+      matchPackageNames: [
+        "**/plugin-barman-cloud",
+        "**/plugin-barman-cloud-sidecar"
+      ],
       group: {
         commitMessageTopic: "{{{groupName}}} group",
       },
@@ -35,7 +41,11 @@
       description: "Flux Operator Group",
       groupName: "flux-operator",
       matchDatasources: ["docker"],
-      matchPackageNames: ["/flux-operator/", "/flux-instance/", "/flux-operator-manifests/"],
+      matchPackageNames: [
+        "/flux-operator/",
+        "/flux-instance/",
+        "/flux-operator-manifests/"
+      ],
       group: {
         commitMessageTopic: "{{{groupName}}} group",
       },
@@ -45,7 +55,10 @@
       description: "Immich Group",
       groupName: "immich",
       matchDatasources: ["docker"],
-      matchPackageNames: ["**/immich-app/immich-server", "**/immich-app/immich-machine-learning"],
+      matchPackageNames: [
+        "**/immich-app/immich-server",
+        "**/immich-app/immich-machine-learning"
+      ],
       group: {
         commitMessageTopic: "{{{groupName}}} group"
       },
@@ -70,10 +83,26 @@
       minimumGroupSize: 5,
     },
     {
+      description: "Rook-Ceph Group",
+      groupName: "rook-ceph",
+      matchDatasources: ["docker"],
+      matchPackageNames: [
+        "/rook-ceph/",
+        "/rook-ceph-cluster/"
+      ],
+      group: {
+        commitMessageTopic: "{{{groupName}}} group",
+      },
+      minimumGroupSize: 2,
+    },
+    {
       description: "Talos Group",
       groupName: "talos",
       matchDatasources: ["docker"],
-      matchPackageNames: ["/installer/", "/talosctl/"],
+      matchPackageNames: [
+        "/installer/",
+        "/talosctl/"
+      ],
       group: {
         commitMessageTopic: "{{{groupName}}} group",
       },
