chore(rook-ceph): set mgr to 1

--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -52,6 +52,8 @@ spec:
         ssl: false
         prometheusEndpoint: http://prometheus-operated.observability.svc.cluster.local:9090
       mgr:
+        # TODO: Remove prior to multi-node cluster deployment.
+        count: 1
         modules:
           - name: diskprediction_local
             enabled: true
