--- a/kubernetes/apps/downloads/kustomization.yaml
+++ b/kubernetes/apps/downloads/kustomization.yaml
@@ -7,5 +7,5 @@ components:
   - ../../components/common
 resources:
   # Flux-Kustomizations
-  - ./pinchflat/ks.yaml
+  # - ./pinchflat/ks.yaml
   - ./qbittorrent/ks.yaml
