--- a/kubernetes/apps/utilities/kustomization.yaml
+++ b/kubernetes/apps/utilities/kustomization.yaml
@@ -8,5 +8,5 @@ components:
 resources:
   # Flux-Kustomizations
   - ./atuin/ks.yaml
-  - ./cyberchef/ks.yaml
-  - ./it-tools/ks.yaml
+  # - ./cyberchef/ks.yaml
+  # - ./it-tools/ks.yaml
