--- a/kubernetes/apps/observability/silence-operator/silences/silence.yaml
+++ b/kubernetes/apps/observability/silence-operator/silences/silence.yaml
@@ -26,3 +26,15 @@ spec:
     - name: instance
       value: nas.*
       matchType: "=~"
+---
+# yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/observability.giantswarm.io/silence_v1alpha2.json
+apiVersion: observability.giantswarm.io/v1alpha2
+kind: Silence
+metadata:
+  # TODO: Remove once replicas have been increased.
+  name: ceph-health-warning
+  namespace: observability
+spec:
+  matchers:
+    - name: alertname
+      value: CephHealthWarning
