--- a/kubernetes/apps/observability/silence-operator/silences/silence.yaml
+++ b/kubernetes/apps/observability/silence-operator/silences/silence.yaml
@@ -31,10 +31,22 @@ spec:
 apiVersion: observability.giantswarm.io/v1alpha2
 kind: Silence
 metadata:
-  # TODO: Remove once replicas have been increased.
+  # TODO: Remove once Ceph replicas have been increased.
   name: ceph-health-warning
   namespace: observability
 spec:
   matchers:
     - name: alertname
       value: CephHealthWarning
+---
+# yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/observability.giantswarm.io/silence_v1alpha2.json
+apiVersion: observability.giantswarm.io/v1alpha2
+kind: Silence
+metadata:
+  # TODO: Remove once Ceph replicas have been increased.
+  name: kube-pdb-not-enough-healthy-pods
+  namespace: observability
+spec:
+  matchers:
+    - name: alertname
+      value: KubePdbNotEnoughHealthyPods
