--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -127,8 +127,7 @@ spec:
               name: data0
           metadataServer:
             activeCount: 1
-            # TODO: Change to 'true' prior to multi-node cluster deployment.
-            activeStandby: false
+            activeStandby: true
             priorityClassName: system-cluster-critical
             placement:
               topologySpreadConstraints:
