chore(cloudflared): remove cluster-secrets

--- a/kubernetes/apps/network/cloudflared/app/externalsecret.yaml
+++ b/kubernetes/apps/network/cloudflared/app/externalsecret.yaml
@@ -12,13 +12,8 @@ spec:
     name: cloudflared-secret
     template:
       data:
-        CLOUDFLARE_TUNNEL_ID: "{{ .CLOUDFLARE_TUNNEL_ID }}"
-        credentials.json: |
-          {
-            "AccountTag": "{{ .CLOUDFLARE_TUNNEL_ACCOUNT_TAG }}",
-            "TunnelSecret": "{{ .CLOUDFLARE_TUNNEL_SECRET }}",
-            "TunnelID": "{{ .CLOUDFLARE_TUNNEL_ID }}"
-          }
+        TUNNEL_TOKEN: |-
+          {{ toJson (dict "a" .CLOUDFLARE_ACCOUNT_TAG "t" .CLOUDFLARE_TUNNEL_ID "s" .CLOUDFLARE_TUNNEL_SECRET) | b64enc }}
   dataFrom:
     - extract:
         key: cloudflare
