--- a/kubernetes/apps/network/cloudflared/app/dnsendpoint.yaml
+++ b/kubernetes/apps/network/cloudflared/app/dnsendpoint.yaml
@@ -6,7 +6,7 @@ metadata:
   name: cloudflared
 spec:
   endpoints:
-    - dnsName: external.${SECRET_DOMAIN}
+    - dnsName: external.wyde.network
       recordType: CNAME
       targets:
-        - ${SECRET_CLOUDFLARE_TUNNEL_ID}.cfargotunnel.com
+        - ${CLOUDFLARE_TUNNEL_ID}.cfargotunnel.com
