--- a/kubernetes/apps/network/cloudflared/app/resources/config.yaml
+++ b/kubernetes/apps/network/cloudflared/app/resources/config.yaml
@@ -1,10 +1,8 @@
 ---
-originRequest:
-  originServerName: "external.${SECRET_DOMAIN}"
-
 ingress:
-  - hostname: "${SECRET_DOMAIN}"
-    service: &service https://envoy-external.network.svc.cluster.local
-  - hostname: "*.${SECRET_DOMAIN}"
-    service: *service
+  - hostname: "*.wyde.network"
+    service: https://envoy-external.network.svc.cluster.local
+    originRequest:
+      http2Origin: true
+      originServerName: external.wyde.network
   - service: http_status:404
