--- a/kubernetes/apps/network/cloudflared/ks.yaml
+++ b/kubernetes/apps/network/cloudflared/ks.yaml
@@ -13,8 +13,8 @@ spec:
   path: ./kubernetes/apps/network/cloudflared/app
   postBuild:
     substituteFrom:
-      - name: cluster-secrets
-        kind: Secret
+      - kind: Secret
+        name: cloudflare-tunnel-id-secret
   prune: true
   retryInterval: 2m
   sourceRef:
